--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,46 +1,23 @@
-/* ==========================================================================
-   HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
+/* Base
    ========================================================================== */
 
-html,
-button,
-input,
-select,
-textarea {
-    color: #222;
+#map {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: -1;
 }
 
-body {
-    font-size: 1em;
-    line-height: 1.4;
+/* Start view
+   ========================================================================== */
+
+#start-view {
 }
 
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
+/* Result view
+   ========================================================================== */
 
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
+#result-view {
 }
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-img {
-    vertical-align: middle;
-}
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
