--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,8 +16,14 @@
 #start-view {
 }
 
+#start-view form {
+    max-width: 400px;
+    margin: 10% auto;
+}
+
 /* Result view
    ========================================================================== */
 
 #result-view {
+    display: none;
 }
