--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,3 +27,19 @@
 #result-view {
     display: none;
 }
+
+#result-view .regeringen {
+    max-width: 600px;
+    padding: 10px;
+    margin: 10% auto;
+}
+
+#result-view footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100px;
+    padding: 10px;
+    text-align: center;
+}
