--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,11 @@
+/*
+ background = #404D55
+ yellow1    = #D69616
+ yellow2    = #BA7A14
+ yellow3    = #895928
+ white      = #E7D8CE
+ */
+
 /* Base
    ========================================================================== */
 
