--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -110,12 +110,12 @@ a:active {
 
 #result-view .minister.l {
     width: 100%;
-    height: 130px;
+    height: 140px;
 }
 
 #result-view .minister.m {
     width: 33%;
-    height: 110px;
+    height: 120px;
 }
 
 #result-view .minister.s {
@@ -148,6 +148,7 @@ a:active {
 #result-view .minister .name {
     font-weight: bold;
     text-align: center;
+    margin-top: 5px;
 }
 
 #result-view .minister .title {
