--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -125,7 +125,7 @@ a:active {
 
 #result-view .minister .thumbnail {
     margin: auto;
-    background: #000;
+    background-color: #000;
     border-radius: 50%;
     border: none;
 }
@@ -144,6 +144,15 @@ a:active {
     width: 30px;
     height: 30px;
 }
+
+#result-view .minister .thumbnail.m  { background-color: #1B49DD; }
+#result-view .minister .thumbnail.c  { background-color: #009933; }
+#result-view .minister .thumbnail.fp { background-color: #6BB7EC; }
+#result-view .minister .thumbnail.kd { background-color: #231977; }
+#result-view .minister .thumbnail.mp { background-color: #83CF39; }
+#result-view .minister .thumbnail.s  { background-color: #EE2020; }
+#result-view .minister .thumbnail.v  { background-color: #AF0000; }
+#result-view .minister .thumbnail.sd { background-color: #895928; }
 
 #result-view .minister .name {
     font-weight: bold;
