--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -228,6 +228,11 @@ a:active {
     margin: 0px;
 }
 
+#result-view footer .twitter-share-button {
+    margin-left: 10px;
+    vertical-align: bottom;
+}
+
 /* Search again 
    ========================================================================== */
 
