--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -128,6 +128,14 @@ a:active {
     margin-bottom: 20px;
 }
 
+#start-view h2 {
+    color: #d69616;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 5px;
+    letter-spacing: 1px;
+}
+
 #start-view .spinner {
     display: none;
     position: relative;
