Add example addresses to front page

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -184,6 +184,17 @@ a:active {
     float: right;
 }
 
+#start-view .examples {
+    font-size: 85%;
+}
+
+#start-view .show {
+    cursor: pointer;
+    text-align: center;
+}
+
+
+
 /* Result view
    ========================================================================== */
 
